# GUI-DR

./: .env.example  .gitignore  README.md  comparison_ui.py  pyproject.toml  qwen_variant_results.json  streamlit_viewer.py  variant_results.json
.streamlit/: config.toml
baseline_analysis/: baseline_analysis.ipynb  gta1_analysis.ipynb  qwen25_analysis.ipynb  uitars_analysis.ipynb
baseline_results_full_new/: predictions_uitars15_reasoning_relational_query_20251213_222938.jsonl
data/: baseline_confidence_intervals.csv  baseline_data_visualization_v2.ipynb  baseline_data_visualization_v3.ipynb  baseline_mcnemar_tests.csv  baseline_results_analysis.ipynb  baseline_results_combined.csv  baseline_results_final.ipynb  data_review_helper.py  eda.py  finetuned_confidence_intervals.csv  finetuned_data_visualization_v3.ipynb  finetuned_mcnemar_tests.csv  generate_paper_tables.py  inspect_eval_dataset.py  load_variant_data.py  paper_tables.tex  plot_directional_bias.py  plot_remaining_figures.py  plot_with_ci.py  push_eval_dataset_to_hub.py  result_fix_for_denormalization_bug.ipynb  review_variants.py  run_20251112_004959_test_domain_original_reviews.csv  save_eval_data_to_hf_format.py  section_5_prose.tex  statistical_analysis.py  test_split_df_check.py  update_multi_element_instructions.py  variant_data_cleaned.csv
experiments/: uitars15_predict.py
finetuned_results_full_new/: predictions_uitars15_no_reasoning_direct_query_20251224_051210.jsonl  predictions_uitars15_no_reasoning_direct_query_20251224_204302.jsonl  predictions_uitars15_no_reasoning_direct_query_20251225_004633.jsonl  predictions_uitars15_no_reasoning_relational_query_20251224_051420.jsonl  predictions_uitars15_no_reasoning_relational_query_20251224_204259.jsonl  (+7 more)
src/: eda.py  (+14 more)
(+65 files in other folders)
