[project]
name = "webdomainrandomizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
]

[tool.uv]
dev-dependencies = []
package = false
