[project]
name = "gui-dr"
version = "0.1.0"
description = "GUI domain-randomization pipeline for generating diagnostic GUI grounding evaluation data from Mind2Web MHTML archives."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.14.0",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pd>=0.0.4",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "streamlit>=1.54.0",
]

[project.urls]
Repository = "https://github.com/ManifoldRG/GUI-DR.git"
Documentation = "https://github.com/ManifoldRG/GUI-DR.git#readme"

[dependency-groups]
dev = []

[tool.uv]
package = false
